# dog-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yml  config.example.json  deploy-dc-bot.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
entities/: Cargo.toml
entities/src/: impl.rs  lib.rs
entities/src/entities/: pending_flushes.rs
entities/src/entity/: messages.rs  mod.rs  prelude.rs
entity/: Cargo.toml
entity/src/: lib.rs  messages.rs  pending_flushes.rs  prelude.rs
entity/src/entity/: prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250704_012322_add_flush_reason.rs  m20250710_000001_optimize_channel_stats.rs
migrations/: 20250627163728_init.sql
src/: config.rs  database.rs  error.rs  lib.rs  main.rs
src/commands/: cookie.rs  flush.rs  help.rs  mod.rs  ping.rs  system.rs  tree_hole.rs
src/commands/stats/: active.rs  channel.rs  mod.rs  user.rs
src/commands/utils/: help.rs  mod.rs  ping.rs  system.rs
src/database/: active.rs  channel.rs  codec.rs  flush.rs  invite.rs  messages.rs  mod.rs
src/database/entities/: messages.rs  pending_flushes.rs
src/framework/: active.rs  checks.rs  cookie.rs  flush.rs  health.rs  mod.rs  supervisors.rs  system.rs  tree_hole.rs  volunteer.rs
src/framework/flush/: command.rs  mod.rs
src/framework/stats/: active.rs  channel.rs  mod.rs  user.rs
src/framework/supervisors/: command.rs  invite.rs  mod.rs
src/framework/vote/: command.rs  mod.rs
src/handler/: active.rs  clewdr.rs  cookie.rs  flush.rs  mod.rs  ping.rs  tree_hole.rs
src/handlers/: active.rs  boot.rs  cookie.rs  flush.rs  mod.rs  ping.rs  tree_hole.rs
src/repo/: messages.rs  mod.rs
src/services/: flush.rs  messages.rs  mod.rs
src/utils/: children.rs  mod.rs
