[package]
name = "dc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2", features = ["serde"] }
chrono = "0.4.41"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env", "json"] }
poise = "0.6"
rand = "0.9"
redb = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serenity = "0.12"
snafu = { version = "0.8", features = ["rust_1_81"] }
sysinfo = "0.35"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
