[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lib]
name = "entity"
path = "src/lib.rs" 

[dependencies]
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serenity = { version = "0.12", default-features = false, features = ["model","rustls_backend"] }
